# Orion

./: .gitignore  Directory.Build.props  Orion.sln  bootstrap.js  core_detailed_restore.txt  local-file.txt  orion.js  package-lock.json  package.json
docs/: desktop.md
showcase/: orion.yaml
showcase/public/: app.js  index.html  style.css
src/Orion.Api/: AuthExchangeRequest.cs  Orion.Api.csproj  Orion.Api.http  Program.cs  appsettings.json
src/Orion.Api/Controllers/: S3Controller.cs
src/Orion.Api/Middleware/: WafMiddleware.cs
src/Orion.Api/Properties/: launchSettings.json
src/Orion.Api/Proxy/: DynamicProxyConfigProvider.cs
src/Orion.Api/Security/: DefaultHsmProvider.cs
src/Orion.Api/Services/: NodeGrpcService.cs
src/Orion.Api/obj_stuck/: Orion.Api.csproj.nuget.dgspec.json  Orion.Api.csproj.nuget.g.props  Orion.Api.csproj.nuget.g.targets  project.assets.json  project.nuget.cache
src/Orion.Cli/: Orion.Cli.csproj  Program.cs
src/Orion.Core/: Class1.cs  Orion.Core.csproj
src/Orion.Core/Data/: schema.esdl
src/Orion.Core/Jobs/: JobDispatcher.cs  (+1 more)
src/Orion.Dashboard/: App.razor  Orion.Dashboard.csproj  Program.cs  _Imports.razor  package-lock.json  package.json  tailwind.config.js
src/Orion.Dashboard.Solid/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/Orion.Dashboard.Solid/src-tauri/: Cargo.toml  tauri.conf.json
src/Orion.Dashboard.Solid/src-tauri/capabilities/: default.json
src/Orion.Dashboard.Solid/src-tauri/icons/: icon.icns
src/Orion.Dashboard.Solid/src-tauri/src/: lib.rs  main.rs
(+84 files in other folders)
